--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,36 @@
 -i http://mirrors.aliyun.com/pypi/simple/  --trusted-host mirrors.aliyun.com
-absl-py==0.8.0
+absl-py==0.11.0
 aiofiles==0.4.0
 astor==0.8.0
-certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 falcon==2.0.0
-gast==0.3.1
-google-pasta==0.1.7
-grpcio==1.23.0
+gast==0.3.3
+google-pasta==0.2.0
+grpcio==1.32.0
 h11==0.8.1
 h2==3.1.1
-h5py==2.10.0
 hpack==3.0.0
 httpcore==0.3.0
 hyperframe==5.2.0
-idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
-Keras==2.2.4
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.0
-Markdown==3.1.1
+keras==2.2.5
+keras-applications==1.0.8
+keras-preprocessing==1.1.2
+Markdown==3.3.3
 MarkupSafe==1.1.0
 multidict==4.5.2
-numpy==1.16.4
+numpy==1.16.6
 opencv-python==4.1.1.26
-protobuf==3.9.1
+protobuf==3.14.0
 PyYAML==5.1.2
-requests==2.22.0
-requests-async==0.5.0
 rfc3986==1.3.2
 scipy==1.3.1
-six==1.13.0
 tensorboard==1.14.0
-tensorflow==1.14.0
-tensorflow-estimator==1.14.0
+tensorflow_estimator==1.14.0
 termcolor==1.1.0
-toml==0.10.0
-urllib3==1.25.7
-Werkzeug==0.15.3
-wrapt==1.11.2
+toml==0.10.2
 waitress==1.4.1
+Werkzeug==1.0.1
+wrapt==1.12.1
